hot fix for Astro firefox scrollbar ...

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ body {
 }
 
 .overflow-hidden {
-  overflow: hidden;
+  overflow: hidden !important;
 }
 
 /* main {} */
